--- a/Reddit.ipynb
+++ b/Reddit.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reddit Scrapper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing libraries "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries for web scrapping\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support import expected_conditions as ec\n",
@@ -24,6 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries for web datatabase\n",
     "from pymongo.mongo_client import MongoClient\n",
     "from pymongo.server_api import ServerApi\n",
     "import pymongo"
@@ -35,7 +51,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing system libraries\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Webscrapping"
    ]
   },
   {
@@ -44,6 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating instance of chrome and setting the prefarences\n",
     "chrome_option = webdriver.ChromeOptions()\n",
     "prefs = {\"profile.default_content_setting_values.notifications\":2}\n",
     "chrome_option.add_experimental_option(\"prefs\",prefs)"
@@ -115,6 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setting the URL to the desired URL\n",
     "driver = webdriver.Chrome(options=chrome_option)\n",
     "base_url=\"https://www.reddit.com/search/?sort=hot&q=\"\n",
     "driver.get(base_url+search)\n",
@@ -127,6 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# extracting the html code\n",
     "soup=BeautifulSoup(driver.page_source,\"html.parser\") "
    ]
   },
@@ -178,6 +205,7 @@
     }
    ],
    "source": [
+    "# Getting the posts\n",
     "all_posts=soup.find_all(\"a\",{\"absolute inset-0\"}) \n",
     "post_list = []\n",
     "for post in all_posts: \n",
@@ -193,7 +221,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# closing the instance\n",
     "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Putting the posts to the database"
    ]
   },
   {
@@ -210,6 +246,7 @@
     }
    ],
    "source": [
+    "# Connecting to the MongoDB database\n",
     "uri = \"mongodb+srv://arkoprabho12:Arko1234#@arko0.r2kihyv.mongodb.net/ArkoDB?retryWrites=true&w=majority\"\n",
     "\n",
     "# Create a new client and connect to the server\n",
@@ -237,6 +274,7 @@
     }
    ],
    "source": [
+    "# Inserting the data\n",
     "database_name = \"ArkoDB\"\n",
     "collection_name = \"Users\"\n",
     "\n",
