--- a/facebook.ipynb
+++ b/facebook.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Facebook Scrapper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries for web scrapping\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support import expected_conditions as ec\n",
@@ -21,6 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries for web datatabase\n",
     "from pymongo.mongo_client import MongoClient\n",
     "from pymongo.server_api import ServerApi\n",
     "import pymongo"
@@ -32,7 +48,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing system libraries\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Webscrapping"
    ]
   },
   {
@@ -41,6 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating instance of chrome and setting the prefarences\n",
     "chrome_option = webdriver.ChromeOptions()\n",
     "prefs = {\"profile.default_content_setting_values.notifications\":2}\n",
     "chrome_option.add_experimental_option(\"prefs\",prefs)"
@@ -52,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Logging into Facebook\n",
     "driver = webdriver.Chrome(options=chrome_option)\n",
     "driver.get(\"http://www.facebook.com\")\n",
     "\n",
@@ -73,6 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting the input keyword\n",
     "with open(\"keyword.txt\",\"r\") as file:\n",
     "    hashtag_to_search = file.read().strip()"
    ]
@@ -92,6 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting the Country\n",
     "user_country = \"\"\n",
     "if(os.path.exists(\"region.txt\")):\n",
     "    with open(\"region.txt\",\"r\") as file:\n",
@@ -119,6 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Searching for relevant posts\n",
     "search_box = WebDriverWait(driver, 10).until(ec.element_to_be_clickable((By.CSS_SELECTOR,\"input[type='search']\")))\n",
     "search_box.clear()\n",
     "search_box.send_keys(f\"#{search}\")\n",
@@ -150,6 +179,7 @@
     }
    ],
    "source": [
+    "# Getting the posts\n",
     "post_list = []\n",
     "soup=BeautifulSoup(driver.page_source,\"html.parser\") \n",
     "all_posts=soup.find_all(\"div\",{\"class\":\"xdj266r x11i5rnm xat24cr x1mh8g0r x1vvkbs x126k92a\"}) \n",
@@ -165,7 +195,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# closing the instance\n",
     "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Putting the posts into the database"
    ]
   },
   {
@@ -182,12 +220,11 @@
     }
    ],
    "source": [
+    "# Connecting to the MongoDB database\n",
     "uri = \"mongodb+srv://arkoprabho12:Arko1234#@arko0.r2kihyv.mongodb.net/ArkoDB?retryWrites=true&w=majority\"\n",
     "\n",
-    "# Create a new client and connect to the server\n",
     "client = MongoClient(uri, server_api=ServerApi('1'))\n",
     "\n",
-    "# Send a ping to confirm a successful connection\n",
     "try:\n",
     "    client.admin.command('ping')\n",
     "    print(\"Pinged your deployment. You successfully connected to MongoDB!\")\n",
@@ -209,7 +246,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Inserting the data\n",
     "database_name = \"ArkoDB\"\n",
     "collection_name = \"Users\"\n",
     "\n",
