--- a/pintrest.ipynb
+++ b/pintrest.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# pinterest Scrapper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries for web scrapping\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support import expected_conditions as ec\n",
@@ -23,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries for web datatabase\n",
     "from pymongo.mongo_client import MongoClient\n",
     "from pymongo.server_api import ServerApi\n",
     "import pymongo"
@@ -34,7 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing system libraries\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Webscrapping"
    ]
   },
   {
@@ -43,6 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating instance of chrome and setting the prefarences\n",
     "chrome_option = webdriver.ChromeOptions()\n",
     "prefs = {\"profile.default_content_setting_values.notifications\":2}\n",
     "chrome_option.add_experimental_option(\"prefs\",prefs)"
@@ -54,6 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Logging into pinterest\n",
     "driver = webdriver.Chrome(options=chrome_option)\n",
     "driver.get(\"https://analytics.pinterest.com/login/?next=https://trends.pinterest.com/\")\n",
     "\n",
@@ -84,6 +110,7 @@
     }
    ],
    "source": [
+    "# Getting Country or region\n",
     "user_country = \"United States\"\n",
     "if(os.path.exists(\"region.txt\")):\n",
     "    with open(\"region.txt\",\"r\") as file:\n",
@@ -97,13 +124,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#Going to the correct URL\n",
     "country = {\"United States\":\"US\",\"Canada\":\"CA\",\"Southern Europe (GR, IT, MT, PT, ES)\":\"IT%2BES%2BPT%2BGR%2BMT\",\"Italy\":\"IT\",\"Spain\":\"ES\",\"Germanic countries (DE, AT, CH)\":\"DE%2BAT%2BCH\",\"Germany\":\"DE\",\"Great Britain and Ireland (GB, IE)\":\"GB%2BIE\",\"France\" : \"FR\",\"Nordic countries (NO, FI, DK, SE)\" : \"SE%2BDK%2BFI%2BNO\",\"Benelux (NL, BE, LU)\":\"NL%2BBE%2BLU\",\"Eastern Europe (HU, PL, RO, SK, CZ)\":\"PL%2BRO%2BHU%2BSK%2BCZ\",\"Hispanic LatAm (CL, CO, AR, MX)\":\"MX%2BAR%2BCO%2BCL\",\"Colombia\":\"CO\",\"Argentina\":\"AR\",\"Mexico\":\"MX\",\"Brazil\":\"BR\",\"Australasia (AU, NZ)\":\"AU%2BNZ\"}\n",
     "before_url = driver.current_url\n",
     "\n",
-    "# Check if the entered country is in the dictionary\n",
     "if user_country in country:\n",
-    "    # Get the country code from the dictionary\n",
     "    country_code = country[user_country]\n",
     "    driver.get(before_url+\"?country=\"+country_code)\n",
     "    time.sleep(3)"
@@ -123,6 +148,7 @@
     }
    ],
    "source": [
+    "# Keyword to search\n",
     "with open(\"keyword.txt\",\"r\") as file:\n",
     "    hashtag_to_search = file.read().strip()\n",
     "print(hashtag_to_search)"
@@ -134,11 +160,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Inputting the keyword\n",
     "button = WebDriverWait(driver, 2).until(ec.element_to_be_clickable((By.CSS_SELECTOR, \"div[id='trends-filter-expandable-1']\"))).click()\n",
     "\n",
     "search_box = WebDriverWait(driver, 10).until(ec.element_to_be_clickable((By.CSS_SELECTOR, \"input[id='trends-filter-include-keywords']\")))\n",
     "search_box.clear()\n",
-    "search_box.send_keys(hashtag_to_search)  # Remove curly braces\n",
+    "search_box.send_keys(hashtag_to_search)  \n",
     "\n",
     "search_box.send_keys(Keys.RETURN)\n",
     "time.sleep(3)"
@@ -158,6 +185,7 @@
     }
    ],
    "source": [
+    "# Getting the age\n",
     "selected_age = \"\"\n",
     "if(os.path.exists(\"age.txt\")):\n",
     "    with open(\"age.txt\",\"r\") as file:\n",
@@ -171,11 +199,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Going to the correct URL\n",
     "if(len(selected_age) != 0):\n",
     "    current_url = driver.current_url\n",
     "    age_url = current_url+\"&ageBucket=\"\n",
     "    driver.get(age_url+selected_age)\n",
-    "    # for 65+ it is different in url\n",
     "    time.sleep(4)"
    ]
   },
@@ -185,6 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting the HTML code\n",
     "soup=BeautifulSoup(driver.page_source,\"html.parser\") "
    ]
   },
@@ -254,12 +283,20 @@
     }
    ],
    "source": [
+    "# Getting all the posts\n",
     "all_posts=soup.find_all(\"div\",{\"KS5 hs0 un8 HOt BxF\"}) \n",
     "post_list = []\n",
     "for post in all_posts: \n",
-    "    #print(post.get_text())\n",
+    "    \n",
     "    post_list.append(post.get_text())\n",
     "post_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Putting the posts to the database"
    ]
   },
   {
@@ -276,12 +313,11 @@
     }
    ],
    "source": [
-    "uri = \"mongodb+srv://arkoprabho12:Arko1234#@arko0.r2kihyv.mongodb.net/ArkoDB?retryWrites=true&w=majority\"\n",
+    "# Connecting to the Mongo DB\n",
+    "url = \"mongodb+srv://arkoprabho12:Arko1234#@arko0.r2kihyv.mongodb.net/ArkoDB?retryWrites=true&w=majority\"\n",
     "\n",
-    "# Create a new client and connect to the server\n",
-    "client = MongoClient(uri, server_api=ServerApi('1'))\n",
+    "client = MongoClient(url, server_api=ServerApi('1'))\n",
     "\n",
-    "# Send a ping to confirm a successful connection\n",
     "try:\n",
     "    client.admin.command('ping')\n",
     "    print(\"Pinged your deployment. You successfully connected to MongoDB!\")\n",
@@ -303,28 +339,24 @@
     }
    ],
    "source": [
-    "# Replace these values with your MongoDB connection string and database/collection names\n",
+    "# Putting the posts\n",
     "database_name = \"ArkoDB\"\n",
     "collection_name = \"Users\"\n",
-    "# Sample data to insert\n",
+    "\n",
     "data_to_insert = {\n",
     "    \"Source\": \"pinterest\",\n",
     "    \"hashtag_to_search\": hashtag_to_search,\n",
     "    \"list-keyword\" : post_list\n",
     "}\n",
     "\n",
-    "# Connect to MongoDB\n",
-    "client = pymongo.MongoClient(uri)\n",
+    "client = pymongo.MongoClient(url)\n",
     "database = client[database_name]\n",
     "collection = database[collection_name]\n",
     "\n",
-    "# Insert data into the collection\n",
     "inserted_data = collection.insert_one(data_to_insert)\n",
     "\n",
-    "# Print the inserted document's ID\n",
     "print(\"Inserted document ID:\", inserted_data.inserted_id)\n",
     "\n",
-    "# Close the MongoDB connection\n",
     "client.close()"
    ]
   },
