--- a/dataScanning.ipynb
+++ b/dataScanning.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getting Relevant Posts and Topic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries for topic\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import NMF\n",
     "import numpy"
@@ -13,18 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing Libraries for posts\n",
     "import torch\n",
     "from transformers import BertTokenizer, BertModel\n",
     "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting all the posts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,23 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'pinterestData.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpinterestData.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      2\u001b[0m     dataList \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m      3\u001b[0m dataList \u001b[38;5;241m=\u001b[39m [item\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m dataList]\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    303\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    304\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    305\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    308\u001b[0m     )\n\u001b[1;32m--> 310\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pinterestData.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Getting pinterest posts \n",
     "with open(\"pinterestData.txt\",\"r\") as file:\n",
     "    dataList = file.readlines()\n",
     "dataList = [item.strip() for item in dataList]\n",
@@ -58,11 +69,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting facebook posts\n",
     "with open(\"facebookPost.txt\",\"r\", encoding=\"utf-8\") as file:\n",
+    "    dataList = file.readlines()\n",
+    "dataList = [item.strip() for item in dataList]\n",
+    "post_list.extend(dataList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting reddit posts\n",
+    "with open(\"redditPost.txt\",\"r\", encoding=\"utf-8\") as file:\n",
     "    dataList = file.readlines()\n",
     "dataList = [item.strip() for item in dataList]\n",
     "post_list.extend(dataList)"
@@ -74,43 +99,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"redditPost.txt\",\"r\", encoding=\"utf-8\") as file:\n",
-    "    dataList = file.readlines()\n",
-    "dataList = [item.strip() for item in dataList]\n",
-    "post_list.extend(dataList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# getting the keyword\n",
     "with open(\"keyword.txt\",\"r\") as file:\n",
     "    hashtag_to_search = file.read().strip()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting the relevant Posts and Topic"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['christmas boys',\n",
-       " 'merry christmas',\n",
-       " 'aww christmasclub',\n",
-       " 'pics happyhungryhijabi',\n",
-       " 'practicalday9048 christmaslights']"
+       "['wallpaper kitty',\n",
+       " 'ideas tree',\n",
+       " 'merry decor',\n",
+       " 'paintings canvas',\n",
+       " 'gifts diy']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Getting the topic\n",
     "list_keyword = []\n",
     "def extract_topics(posts, num_topics = 5):\n",
     "    vectorizer = TfidfVectorizer(max_df=0.85, max_features=1000, stop_words='english')\n",
@@ -130,52 +152,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Christmas on more people : Christmas tree. My christmas :',\n",
+       "['christmas nails',\n",
+       " 'christmas wallpaper',\n",
+       " 'christmas tree ideas',\n",
+       " 'christmas cookies',\n",
+       " 'christmas tree',\n",
+       " 'christmas crafts',\n",
+       " 'christmas wallpaper aesthetic',\n",
+       " 'christmas gift ideas',\n",
+       " 'diy christmas ornaments',\n",
+       " 'christmas nails 2023',\n",
+       " 'christmas nail designs',\n",
+       " 'simple christmas nails',\n",
+       " 'christmas gifts',\n",
+       " 'coloring pages christmas',\n",
+       " 'christmas wallpaper iphone',\n",
+       " 'pink christmas wallpaper',\n",
+       " 'christmas paintings',\n",
+       " 'christmas house exterior',\n",
+       " 'christmas pfp',\n",
+       " 'diy christmas gifts',\n",
+       " 'christmas crafts for kids',\n",
+       " 'holiday decor christmas',\n",
+       " 'christmas hello kitty wallpaper',\n",
+       " 'christmas wallpaper laptop',\n",
+       " 'christmas wallpaper ipad',\n",
+       " 'hallway christmas decor',\n",
+       " 'christmas gifts for boyfriend',\n",
+       " 'christmas painting ideas',\n",
+       " 'christmas basket for boyfriend',\n",
+       " 'gingerbread themed christmas decor',\n",
+       " 'christmas computer wallpaper',\n",
+       " 'little women christmas',\n",
+       " 'christmas canvas paintings',\n",
+       " 'funny christmas wallpaper',\n",
+       " 'christmas basket gift ideas',\n",
+       " 'christmas rock painting ideas',\n",
+       " 'hello kitty wallpaper christmas',\n",
+       " 'jenga block christmas crafts',\n",
+       " 'cute christmas wallpapers',\n",
+       " 'christmas paintings on canvas',\n",
+       " 'christmas wallpaper grinch',\n",
+       " 'family christmas pictures outdoor',\n",
+       " 'north pole christmas decor',\n",
+       " '2x4 christmas tree',\n",
+       " 'christmas outfit',\n",
+       " 'christmas door decorations',\n",
+       " 'diy christmas pictures',\n",
+       " 'christmas lights',\n",
+       " 'christmas wallpaper red',\n",
+       " 'christmas painting',\n",
+       " 'Reggie & Ladye Love Smith sing the classics and more on their Christmas album That Special Time of Year! 🎄Listen here: http://gaithermusic.lnk.to/RLSp… See more',\n",
+       " 'One pan Christmas dinner #christmas #christmasgiftsideas #christmastime #dinnerideas #familyfriendly',\n",
+       " 'A cute + affordable way to add some Christmas cheer to your front entry 🎁🎄 #christmas #christmasdecor #christmasfrontporch #christmasdecoratingideas',\n",
+       " '-#Positivity-',\n",
+       " 'So if you couldn’t tell, it was pouring rain all day. I waited until the last second to whip this parade “float” together. The tents I borrowed flew a… See more',\n",
+       " 'In memory of Shane MacGowan ❤️#cairde #shanemacgowan #thepogues #Christmas',\n",
+       " 'Do you want to build a… vegetable man?',\n",
+       " 'These is about to become my theme song 😊#fyp #holdon #changeiscoming #love #christmas #spreadinglove',\n",
+       " 'Christmas on more people : Christmas tree. My christmas :',\n",
+       " 'Christmas',\n",
        " 'Christmas boys, Christmas…',\n",
-       " 'Oh, Christmas Cat oh Christmas cat…',\n",
-       " 'Grandpa won Christmas!',\n",
+       " 'My Christmas bonus',\n",
+       " 'Christmas',\n",
        " 'Christmas lights and christmas market, first ever street photography session.',\n",
+       " 'My Christmas baby',\n",
+       " 'Christmas Countdown: SFH Christmas Edition (12 days left)',\n",
+       " 'Grandpa won Christmas!',\n",
+       " 'Oh, Christmas Cat oh Christmas cat…',\n",
+       " 'Loser Christmas',\n",
+       " 'Merry.christmas',\n",
+       " 'Celebrate Christmas With Creative Christmas Trees!!🎄🎄❤️💚',\n",
+       " 'Christmas wishlist :',\n",
        " '“Christmas with DOOM” a virtual christmas card',\n",
        " 'Christmas',\n",
-       " 'Celebrate Christmas With Creative Christmas Trees!!🎄🎄❤️💚',\n",
-       " 'Christmas',\n",
-       " 'Christmas wishlist :',\n",
-       " '\"No, he\\'s the Christmas Rapist! He rapes on Christmas! Is nothing sacred?!\"',\n",
-       " 'Merry Christmas!!!⛄🎅🦌',\n",
-       " \"It's a Christmas miracle\",\n",
-       " 'Magical Christmas Fireplace • 10-Hour Christmas Ambience',\n",
-       " 'Spending Christmas away from family this year…..merry Christmas to me!',\n",
+       " 'Merry Christmas',\n",
        " 'Christmas humour',\n",
+       " 'London Christmas?',\n",
+       " 'Happy Christmas!',\n",
+       " 'Christmas',\n",
+       " 'Merry Christmas!!!⛄🎅🦌',\n",
+       " '\"No, he\\'s the Christmas Rapist! He rapes on Christmas! Is nothing sacred?!\"',\n",
+       " \"It's a Christmas miracle\",\n",
        " 'New Christmas Tree + Christmas decorations + Chinese NY decorations Leaked by Clash Kurdish',\n",
-       " 'Christmas Blessings',\n",
-       " 'Christmas 2023',\n",
-       " 'Christmas time',\n",
-       " 'Christmas Gifting',\n",
-       " 'Christmas came early',\n",
        " 'r/christmas',\n",
        " 'r/ChristmasDecorating',\n",
        " 'r/ChristmasLights',\n",
        " 'r/pics',\n",
        " 'r/aww',\n",
        " 'u/ChristmasOf1984',\n",
-       " 'u/ChristmasClub',\n",
        " 'u/PracticalDay9048',\n",
        " 'u/happyhungryhijabi',\n",
-       " 'u/OzBargainBot']"
+       " 'u/OzBargainBot',\n",
+       " 'u/jam1974']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Getting the most relevant posts\n",
     "def get_bert_embeddings(posts):\n",
     "    model_name = 'bert-base-uncased'\n",
     "    tokenizer = BertTokenizer.from_pretrained(model_name)\n",
@@ -210,19 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Taking Topmost 10 posts\n",
     "if(len(relevant_posts) > 10):\n",
-    "    relevant_posts = relevant_posts[:10]\n",
-    "if(len(list_keyword) > 5) : \n",
-    "    list_keyword = list_keyword[:5]"
+    "    relevant_posts = relevant_posts[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
