--- a/facebook.ipynb
+++ b/facebook.ipynb
@@ -48,8 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing system libraries\n",
-    "import os"
+    "# Importing system libraries and config files\n",
+    "import os\n",
+    "import config"
    ]
   },
   {
@@ -85,10 +86,10 @@
     "password = WebDriverWait(driver, 10).until(ec.element_to_be_clickable((By.CSS_SELECTOR,\"input[name='pass']\")))\n",
     "\n",
     "username.clear()\n",
-    "username.send_keys(\"Arkoprabho Das\")\n",
+    "username.send_keys(config.facebook_username)\n",
     "\n",
     "password.clear()\n",
-    "password.send_keys(\"Arko1234#\")\n",
+    "password.send_keys(config.facebook_password)\n",
     "\n",
     "button = WebDriverWait(driver, 2).until(ec.element_to_be_clickable((By.CSS_SELECTOR, \"button[type='submit']\"))).click()"
    ]
