--- a/pintrest.ipynb
+++ b/pintrest.ipynb
@@ -50,8 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing system libraries\n",
-    "import os"
+    "# Importing system libraries and config files\n",
+    "import os\n",
+    "import config"
    ]
   },
   {
@@ -87,10 +88,10 @@
     "password = WebDriverWait(driver, 10).until(ec.element_to_be_clickable((By.CSS_SELECTOR, \"input[name='password']\")))\n",
     "\n",
     "username.clear()\n",
-    "username.send_keys(\"arkoprabho900@gmail.com\")\n",
+    "username.send_keys(config.pinterest_email)\n",
     "\n",
     "password.clear()\n",
-    "password.send_keys(\"Arko1234#\")\n",
+    "password.send_keys(config.pinterest_password)\n",
     "\n",
     "button = WebDriverWait(driver, 2).until(ec.element_to_be_clickable((By.CSS_SELECTOR, \"button[type='submit']\"))).click()\n",
     "time.sleep(10)\n"
