--- a/ipynb/Reddit.ipynb
+++ b/ipynb/Reddit.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Facebook Scrapper"
+    "# Reddit Scrapper"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing Libraries"
+    "## Importing libraries "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,18 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support import expected_conditions as ec\n",
-    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.by import  By\n",
     "from selenium.webdriver.support.wait import WebDriverWait\n",
+    "from selenium.common.exceptions import TimeoutException\n",
+    "from selenium.webdriver.support.ui import Select \n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from bs4 import BeautifulSoup\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing system libraries and config files\n",
+    "# Importing system libraries and config\n",
     "import os\n",
     "import config"
    ]
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,53 +77,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"keyword.txt\",\"r\") as file:\n",
+    "    topic = file.read().strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_age = \"\"\n",
+    "if(os.path.exists(\"age.txt\")):\n",
+    "    with open(\"age.txt\",\"r\") as file:\n",
+    "        selected_age = file.read().strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country = {\"United States\":\"US\",\"Canada\":\"Canada\",\"Southern Europe (GR, IT, MT, PT, ES)\":\"Southern+Europe\",\"Italy\":\"Italy\",\"Spain\":\"Spain\",\"Germanic countries (DE, AT, CH)\":\"Germanic+countries\",\"Germany\":\"Germany\",\"Great Britain and Ireland (GB, IE)\":\"Great+Britain+and+Ireland\",\"France\" : \"France\",\"Nordic countries (NO, FI, DK, SE)\" : \"Nordic+countries\",\"Benelux (NL, BE, LU)\":\"Belgium\",\"Eastern Europe (HU, PL, RO, SK, CZ)\":\"Eastern+Europe\",\"Hispanic LatAm (CL, CO, AR, MX)\":\"Latin\",\"Colombia\":\"Colombia\",\"Argentina\":\"Argentina\",\"Mexico\":\"Mexico\",\"Brazil\":\"Brazil\",\"Australasia (AU, NZ)\":\"Australia\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Logging into Facebook\n",
-    "driver = webdriver.Chrome(options=chrome_option)\n",
-    "driver.get(\"http://www.facebook.com\")\n",
-    "\n",
-    "username = WebDriverWait(driver, 10).until(ec.element_to_be_clickable((By.CSS_SELECTOR,\"input[name='email']\")))\n",
-    "password = WebDriverWait(driver, 10).until(ec.element_to_be_clickable((By.CSS_SELECTOR,\"input[name='pass']\")))\n",
-    "\n",
-    "username.clear()\n",
-    "username.send_keys(config.facebook_username)\n",
-    "\n",
-    "password.clear()\n",
-    "password.send_keys(config.facebook_password)\n",
-    "\n",
-    "button = WebDriverWait(driver, 2).until(ec.element_to_be_clickable((By.CSS_SELECTOR, \"button[type='submit']\"))).click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Getting the input keyword\n",
-    "with open(\"keyword.txt\",\"r\") as file:\n",
-    "    hashtag_to_search = file.read().strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "country = {\"United States\":\"US\",\"Canada\":\"Canada\",\"Southern Europe (GR, IT, MT, PT, ES)\":\"Southern Europe\",\"Italy\":\"Italy\",\"Spain\":\"Spain\",\"Germanic countries (DE, AT, CH)\":\"Germanic countries\",\"Germany\":\"Germany\",\"Great Britain and Ireland (GB, IE)\":\"Great Britain and Ireland\",\"France\" : \"France\",\"Nordic countries (NO, FI, DK, SE)\" : \"Nordic countries\",\"Benelux (NL, BE, LU)\":\"Belgium\",\"Eastern Europe (HU, PL, RO, SK, CZ)\":\"Eastern Europe\",\"Hispanic LatAm (CL, CO, AR, MX)\":\"Latin\",\"Colombia\":\"Colombia\",\"Argentina\":\"Argentina\",\"Mexico\":\"Mexico\",\"Brazil\":\"Brazil\",\"Australasia (AU, NZ)\":\"Australia\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Getting the Country\n",
     "user_country = \"\"\n",
     "if(os.path.exists(\"region.txt\")):\n",
     "    with open(\"region.txt\",\"r\") as file:\n",
@@ -133,66 +124,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "search = hashtag_to_search\n",
+    "search = topic\n",
     "if(len(user_country) > 0) : \n",
-    "    search = search + \" \" + user_country"
+    "    search = search + \"+\" + user_country\n",
+    "if(len(selected_age) > 0) : \n",
+    "    search = search + \"+age\" + selected_age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Searching for relevant posts\n",
-    "search_box = WebDriverWait(driver, 10).until(ec.element_to_be_clickable((By.CSS_SELECTOR,\"input[type='search']\")))\n",
-    "search_box.clear()\n",
-    "search_box.send_keys(f\"#{search}\")\n",
-    "search_box.send_keys(Keys.RETURN)\n",
-    "time.sleep(10)"
+    "# Setting the URL to the desired URL\n",
+    "driver = webdriver.Chrome(options=chrome_option)\n",
+    "base_url=\"https://www.reddit.com/search/?sort=hot&q=\"\n",
+    "driver.get(base_url+search)\n",
+    "time.sleep(6)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracting the html code\n",
+    "soup=BeautifulSoup(driver.page_source,\"html.parser\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Reggie & Ladye Love Smith sing the classics and more on their Christmas album That Special Time of Year! 🎄Listen here: http://gaithermusic.lnk.to/RLSp… See more',\n",
-       " 'One pan Christmas dinner #christmas #christmasgiftsideas #christmastime #dinnerideas #familyfriendly',\n",
-       " 'A cute + affordable way to add some Christmas cheer to your front entry 🎁🎄 #christmas #christmasdecor #christmasfrontporch #christmasdecoratingideas',\n",
-       " '-#Positivity-',\n",
-       " 'So if you couldn’t tell, it was pouring rain all day. I waited until the last second to whip this parade “float” together. The tents I borrowed flew a… See more',\n",
-       " 'In memory of Shane MacGowan ❤️#cairde #shanemacgowan #thepogues #Christmas',\n",
-       " 'Do you want to build a… vegetable man? ',\n",
-       " 'These is about to become my theme song 😊#fyp #holdon #changeiscoming #love #christmas #spreadinglove']"
+       "['Christmas on more people : Christmas tree. My christmas :',\n",
+       " 'Christmas boys, Christmas…',\n",
+       " 'Oh, Christmas Cat oh Christmas cat…',\n",
+       " 'Grandpa won Christmas!',\n",
+       " 'Christmas lights and christmas market, first ever street photography session.',\n",
+       " '“Christmas with DOOM” a virtual christmas card',\n",
+       " 'Christmas',\n",
+       " 'Celebrate Christmas With Creative Christmas Trees!!🎄🎄❤️💚',\n",
+       " 'Christmas',\n",
+       " 'Christmas wishlist :',\n",
+       " '\"No, he\\'s the Christmas Rapist! He rapes on Christmas! Is nothing sacred?!\"',\n",
+       " 'Merry Christmas!!!⛄🎅🦌',\n",
+       " \"It's a Christmas miracle\",\n",
+       " 'Magical Christmas Fireplace • 10-Hour Christmas Ambience',\n",
+       " 'Spending Christmas away from family this year…..merry Christmas to me!',\n",
+       " 'Christmas humour',\n",
+       " 'New Christmas Tree + Christmas decorations + Chinese NY decorations Leaked by Clash Kurdish',\n",
+       " 'Christmas Blessings',\n",
+       " 'Christmas 2023',\n",
+       " 'Christmas time',\n",
+       " 'Christmas Gifting',\n",
+       " 'Christmas came early',\n",
+       " 'r/christmas',\n",
+       " 'r/ChristmasDecorating',\n",
+       " 'r/ChristmasLights',\n",
+       " 'r/pics',\n",
+       " 'r/aww',\n",
+       " 'u/ChristmasOf1984',\n",
+       " 'u/ChristmasClub',\n",
+       " 'u/PracticalDay9048',\n",
+       " 'u/happyhungryhijabi',\n",
+       " 'u/OzBargainBot']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Getting the posts\n",
+    "all_posts=soup.find_all(\"a\",{\"absolute inset-0\"}) \n",
     "post_list = []\n",
-    "soup=BeautifulSoup(driver.page_source,\"html.parser\") \n",
-    "all_posts=soup.find_all(\"div\",{\"class\":\"xdj266r x11i5rnm xat24cr x1mh8g0r x1vvkbs x126k92a\"}) \n",
     "for post in all_posts: \n",
     "    #print(post.get_text())\n",
-    "    post_list.append(post.get_text())\n",
+    "    result_string = post.get_text().strip('\\n')\n",
+    "    post_list.append(result_string)\n",
     "post_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,12 +230,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Putting the posts into the database"
+    "## Putting the posts to the database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +247,7 @@
     }
    ],
    "source": [
-    "# Connecting to the MongoDB database\n",
-    "uri = \"mongodb+srv://arkoprabho12:Arko1234#@arko0.r2kihyv.mongodb.net/ArkoDB?retryWrites=true&w=majority\"\n",
+    "uri = config.uri\n",
     "\n",
     "client = MongoClient(uri, server_api=ServerApi('1'))\n",
     "\n",
@@ -235,32 +260,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted document ID: 6579d75f1bf149ff1bd528ed\n"
+      "Inserted document ID: 6579b96ffc5d43c30bd1baac\n"
      ]
     }
    ],
    "source": [
     "# Inserting the data\n",
-    "database_name = \"ArkoDB\"\n",
-    "collection_name = \"Users\"\n",
+    "database_name = config.database_name\n",
+    "collection_name = config.collection_name\n",
     "\n",
     "data_to_insert = {\n",
-    "    \"Source\": \"FaceBook\",\n",
-    "    \"hashtag_to_search\": hashtag_to_search,\n",
+    "    \"Source\": \"Reddit\",\n",
+    "    \"hashtag_to_search\": topic,\n",
     "    \"post\": post_list\n",
     "}\n",
     "\n",
     "client = pymongo.MongoClient(uri)\n",
     "database = client[database_name]\n",
     "collection = database[collection_name]\n",
-    "\n",
     "\n",
     "inserted_data = collection.insert_one(data_to_insert)\n",
     "\n",
@@ -271,21 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists(\"facebookPost.txt\"):\n",
-    "        os.remove(\"facebookPost.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"facebookPost.txt\",\"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\"redditPost.txt\",\"w\", encoding=\"utf-8\") as file:\n",
     "    for post in post_list:\n",
     "        file.write(str(post) + \"\\n\")"
    ]
