--- a/ipynb/dataScanning.ipynb
+++ b/ipynb/dataScanning.ipynb
@@ -39,6 +39,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing system libraries\n",
+    "import os"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,6 +333,36 @@
     "with open(\"postKeyword.txt\",\"w\", encoding=\"utf-8\") as file:\n",
     "    for post in list_keyword:\n",
     "        file.write(str(post) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(\"pinterestData.txt\"):\n",
+    "    os.remove(\"pinterestData.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(\"facebookPost.txt\"):\n",
+    "    os.remove(\"facebookPost.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(\"redditPost.txt\"):\n",
+    "    os.remove(\"redditPost.txt\")"
    ]
   }
  ],
