--- a/ipynb/pintrest.ipynb
+++ b/ipynb/pintrest.ipynb
@@ -315,9 +315,9 @@
    ],
    "source": [
     "# Connecting to the Mongo DB\n",
-    "url = \"mongodb+srv://arkoprabho12:Arko1234#@arko0.r2kihyv.mongodb.net/ArkoDB?retryWrites=true&w=majority\"\n",
+    "uri = config.uri\n",
     "\n",
-    "client = MongoClient(url, server_api=ServerApi('1'))\n",
+    "client = MongoClient(uri, server_api=ServerApi('1'))\n",
     "\n",
     "try:\n",
     "    client.admin.command('ping')\n",
@@ -341,8 +341,8 @@
    ],
    "source": [
     "# Putting the posts\n",
-    "database_name = \"ArkoDB\"\n",
-    "collection_name = \"Users\"\n",
+    "database_name = config.database_name\n",
+    "collection_name = config.collection_name\n",
     "\n",
     "data_to_insert = {\n",
     "    \"Source\": \"pinterest\",\n",
@@ -350,7 +350,7 @@
     "    \"list-keyword\" : post_list\n",
     "}\n",
     "\n",
-    "client = pymongo.MongoClient(url)\n",
+    "client = pymongo.MongoClient(uri)\n",
     "database = client[database_name]\n",
     "collection = database[collection_name]\n",
     "\n",
