--- a/ipynb/googleTrends.ipynb
+++ b/ipynb/googleTrends.ipynb
@@ -94,7 +94,8 @@
    "outputs": [],
    "source": [
     "with open(\"keyword.txt\",\"r\") as file:\n",
-    "    q = file.read().strip()"
+    "    q = file.read().strip()\n",
+    "q.replace(\" \",\"%20\")"
    ]
   },
   {
